syntax = "proto3";

option csharp_namespace = "ShoppingCartGrpc.Protos";

service ShoppingCartProtoService{

rpc GetShoppingCart(GetShoppingCartRequest)returns(ShoppingCartMode);
rpc CreateShoppingCart(ShoppingCartMode)returns(ShoppingCartMode);
rpc AddItemsIntoShoppingCart(stream AddItemsIntoShoppingCartRequest)returns(AddItemsIntoShoppingCartResponse);
rpc RemoveItemsFromShoppingCart(RemoveItemsFromShoppingCartRequest)returns(RemoveItemsFromShoppingCartResponse);
}

message GetShoppingCartRequest{
string username =1;
}

message ShoppingCartMode{
string username = 1;
repeated ShoppingCartItemModel cartItems = 2;
}

message ShoppingCartItemModel{
int32 quantity = 1;
float price = 2;
int32 productId = 3;
string Productname= 4;
}

message AddItemsIntoShoppingCartRequest{
string username = 1;
string discountCode = 2;
ShoppingCartItemModel newCartItem = 3;
}

message AddItemsIntoShoppingCartResponse{
bool success = 1;
int32 InsertCount = 2;
}

message RemoveItemsFromShoppingCartRequest{
	string username = 1;
	ShoppingCartItemModel removeCartItem = 2;
}

message RemoveItemsFromShoppingCartResponse{
	bool success = 1;
}
